--- a/configs/stable-diffusion/intel/v2-inference-fp32.yaml
+++ b/configs/stable-diffusion/intel/v2-inference-fp32.yaml
@@ -23,7 +23,7 @@ model:
     unet_config:
       target: ldm.modules.diffusionmodules.openaimodel.UNetModel
       params:
-        use_checkpoint: True
+        use_checkpoint: False
         use_fp16: False
         image_size: 32 # unused
         in_channels: 4
